nav bar spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -352,7 +352,7 @@ div.orange-line {
 
 .wrapper .sidebar ul li {
   font-size: 12px;
-  padding-bottom: 18px;
+  padding-bottom: 25%;
 }
 
 .wrapper .sidebar ul li a {
